<resources>
    <string name="app_name">FilikiEtaireia</string>
    <string name="title_home">Home</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="default_broker_ip">Default broker IP:</string>
    <string name="default_broker_port">Default broker PORT:</string>
    <string name="enter_the_port_here">enter the port here</string>
    <string name="enter_the_broker_ip_here">enter the broker IP here</string>
    <string name="broker_settings">Broker Settings</string>
    <string name="mode">Mode</string>
    <string name="sign_in">Sign in</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="download">Download</string>
    <string name="apply_changes">Apply changes</string>
    <string name="search">search</string>
    <string name="sign_in_to_view_artists" />
    <string name="item_01">item 01</string>
    <string name="artist_name">artist name</string>
    <string name="song_name">song name</string>
</resources>
